--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,18 @@
 {
     "liveServer.settings.port": 5504
 }
+{
+"liveSassCompile.settings.formats":[
+   {
+    "format": "expanded",
+"extensionName":".css",
+"savePath": "/css"
+   },
+   {
+    "format": "compressed",
+"extensionName":".min.css",
+"savePath": "/css"
+   } 
+],
+
+}
